--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "prettier": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-js-pagination": "^3.0.2",
     "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
