consistant doc with jsdoc format

--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,13 @@
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "server": "json-server src/data/employees.json -p 5000 -w -d 0"
+    "server": "json-server src/data/employees.json -p 5000 -w -d 0",
+    "docs": "jsdoc -d docs --configure jsdocConf.json"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
+    "docdash": "^2.0.1",
     "json-server": "^0.17.3",
     "prettier": "^3.0.0",
     "react": "^18.2.0",
