--- a/client/package.json
+++ b/client/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://tiamygarden.github.io/p14_react_wealth_health",
   "name": "client",
   "private": true,
   "version": "0.0.0",
@@ -9,12 +10,14 @@
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "server": "json-server src/data/employees.json -p 5000 -w -d 0",
-    "docs": "jsdoc -d docs --configure jsdocConf.json"
+    "docs": "jsdoc -d docs --configure jsdocConf.json",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
     "docdash": "^2.0.1",
+    "gh-pages": "^6.0.0",
     "json-server": "^0.17.3",
     "prettier": "^3.0.0",
     "react": "^18.2.0",
